--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -2,11 +2,11 @@
 	// 清单文件的版本，这个必须写，而且必须是2
 	"manifest_version": 2,
 	// 插件的名称
-	"name": "aicp",
+	"name": "能力平台部",
 	// 插件的版本
 	"version": "1.0.0",
 	// 插件描述
-	"description": "能力平台部Chrome插件",
+	"description": "高效办公",
 	// 图标，一般偷懒全部用一个尺寸的也没问题
 	"icons":
 	{
@@ -14,18 +14,24 @@
 		"48": "img/icon.png",
 		"128": "img/icon.png"
 	},
+	//常驻后台功能
+	"background": {
+		"scripts": ["js/jquery.js", "js/background.js"]
+	},
 	// 权限申请
 	"permissions":
 	[
 	    "proxy",//代理
 		"contextMenus", // 右键菜单
+		"notifications", // 桌面提醒功能
 		"tabs", // 标签
 		"notifications", // 通知
 		"webRequest", // web请求
 		"webRequestBlocking",
 		"storage", // 插件本地存储
 		"http://*/*", // 可以通过executeScript或者insertCSS访问的网站
-		"https://*/*" // 可以通过executeScript或者insertCSS访问的网站
+		"https://*/*", // 可以通过executeScript或者insertCSS访问的网站
+		"*://aicp.teamshub.com/*" // 跨域请求
 	],
   	// 浏览器右上角图标设置，browser_action、page_action、app必须三选一
 	"browser_action": 
@@ -39,14 +45,15 @@
 	"content_scripts": 
 	[
 		{
-			//"matches": ["http://*/*", "https://*/*"],
+			//"matches": ["http://*/*", "https://*/*"], //定义哪些页面会被注入脚本
+			//"exclude_matches": ["http://*/*", "https://*/*"],// 定义哪些页面不会被注入脚本
 			//"<all_urls>" //表示匹配所有地址
 			//"matches": ["<all_urls>"],
 			"matches": ["http://eip.teamshub.com/t/*"],
 			// 多个JS按顺序注入
 			"js": ["js/jquery.js", "js/content-script.js"],
 			// JS的注入可以随便一点，但是CSS的注意就要千万小心了，因为一不小心就可能影响全局样式
-			//"css": ["css/custom.css"],
+			//"css": ["css/custom.css"], // 注入对应样式表
 			// 代码注入的时间，可选值： "document_start", "document_end", or "document_idle"，最后一个表示页面空闲时，默认document_idle
 			"run_at": "document_end"
 		},
