--- a/aimokr/pom.xml
+++ b/aimokr/pom.xml
@@ -58,6 +58,10 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.8.1</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>aimokr</finalName>
