--- a/aimokr/src/main/resources/application.yaml
+++ b/aimokr/src/main/resources/application.yaml
@@ -1,8 +1,17 @@
 spring:
   profiles:
     active: company
+  servlet:
+    multipart:
+      enabled: true #是否启用http上传处理
+      max-request-size: 100MB #最大请求文件的大小
+      max-file-size: 20MB #设置单个文件最大长度
+      file-size-threshold: 20MB #当文件达到多少时进行磁盘写入
 # 服务端口
 server:
   port: 8090
   servlet:
     context-path: /
+  tomcat:
+    max-http-post-size: -1 #请求传入参数大小限制
+    basedir: /tmp
