--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.sitech.aicareer</groupId>
+    <groupId>com.wrt.aicareer</groupId>
     <artifactId>aicareer</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>aimokr</module>
         <module>iot</module>
+        <module>airbac</module>
+        <module>aipower</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
