--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -32,7 +32,8 @@
 		"storage", // 插件本地存储
 		"http://*/*", // 可以通过executeScript或者insertCSS访问的网站
 		"https://*/*", // 可以通过executeScript或者insertCSS访问的网站
-		"*://*.teamshub.com/*" // 跨域请求
+		"*://*.teamshub.com/*", // 跨域请求
+		"*://192.168.15.60/*" // 跨域请求
 	],
   	// 浏览器右上角图标设置，browser_action、page_action、app必须三选一
 	"browser_action": 
